# bin-packing

./: .gitignore  CLAUDE.md  archive.py  benchmark.py  diamond-hunt-results.md  eval_batch.py  evaluate.py  evaluate_online.py  gen_batch.py  gen_batch_configs.json  harness.py  novelty.py  pyproject.toml
archive/: online_archive_state.json
archive/canonical/: best_fit.py  best_fit_decreasing.py  djang_fitch.py  first_fit.py  first_fit_decreasing.py  harmonic.py  next_fit.py  worst_fit.py
archive/online_canonical/: best_fit.py  first_fit.py  harmonic.py  next_fit.py  worst_fit.py
archive/online_discovered/: gen_00001_2e306352.py  gen_00001_3ad0f14d.py  gen_00001_647347ce.py  gen_00001_8932c388.py  gen_00002_3868de76.py  gen_00002_6eeecd1f.py  gen_00002_d3c2234d.py  gen_00003_0100e7ba.py  gen_00003_ab11b9a1.py  gen_00003_ba59259f.py  gen_00004_27632685.py  gen_00004_50569b94.py  gen_00004_f4043e75.py  gen_00005_0eb90da7.py  gen_00005_54b3bc02.py  gen_00005_c8d17186.py  gen_00006_4ed7cef7.py  gen_00006_e73a91de.py  gen_00007_7280e09a.py  gen_00007_bfe0fbb4.py  gen_00007_f817aa71.py  gen_00008_09afb671.py  gen_00008_641d4724.py  gen_00008_d037106f.py  gen_00009_f63919e5.py  gen_00009_f95952ff.py  gen_00010_5c64cfed.py  gen_00010_92720eb0.py  gen_00010_ecb13a23.py  gen_00011_1158fde4.py  gen_00011_4027f386.py  gen_00011_65a08d67.py  gen_00012_09aeba11.py  gen_00012_65def8b4.py  gen_00012_ed21dbab.py  gen_00013_09633353.py  gen_00013_0e1260c5.py  gen_00013_1925be0d.py  gen_00013_b2c90f62.py  gen_00013_ef38c0ae.py  (+58 more)
archive/online_profiles/: best_fit.json  first_fit.json  (+95 more)
(+102 files in other folders)
