[project]
name = "bin-packing"
version = "0.1.0"
description = "Autonomous discovery of novel online bin packing heuristics"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
